index page css changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- HERO Section  -->
     <div class="hero">
-      <div class="bg"></div>
+      <!-- <div class="bg"></div> -->
       <!-- <p>Digital transformation through </p> -->
       <div class="hero-words">
         <h1>We connect the right technology solutions for you. With a human
@@ -43,7 +43,10 @@
         
         <p>One-stop shop to develop built-to-order technology solutions, specific to your needs and requirements.</p>
 
-        <a href="contact.html" class="hero-btn">Connect Now</a>
+        <!-- <a href="contact.html" class="hero-btn">Connect Now</a> -->
+        <button onclick="window.location.href='contact.html';" id="connect">
+          Connect Now
+        </button>
       </div>
     </div>
 
