--- a/contact.html
+++ b/contact.html
@@ -10,28 +10,26 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <div class="logo">
+      <div class="logo-item">
         <a href="index.html"><img class="logo" src="./images/logotrial.png" alt="Travel Experts Logo"></a>
       </div>
+      <div class="toggle"><a href="#"><i class="fas fa-bars"></i></a></div>
       <nav>
-        <div>
-          <button class="btn-menu">
-           
-          </button>
-          <ul>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="contact.html">Contact Us</a></li> 
-          </ul>
-        </div>
+        <ul>
+          <li class="item"><a href="services.html">Services</a></li>
+          <li class="item"><a href="events.html">Events</a></li>
+          <li class="item"><a href="contact.html">Contact Us</a></li>
+        </ul>
       </nav>
     </header>
+
 
 <!-- Contact Us Form -->
     <main class="contact">
