--- a/events.html
+++ b/events.html
@@ -11,27 +11,25 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <div class="logo">
+      <div class="logo-item">
         <a href="index.html"><img class="logo" src="./images/logotrial.png" alt="Travel Experts Logo"></a>
       </div>
+      <div class="toggle"><a href="#"><i class="fas fa-bars"></i></a></div>
       <nav>
-        <div>
-          <button class="btn-menu">
-            
-          </button>
-          <ul>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="contact.html">Contact Us</a></li> 
-          </ul>
-        </div>
+        <ul>
+          <li class="item"><a href="services.html">Services</a></li>
+          <li class="item"><a href="events.html">Events</a></li>
+          <li class="item"><a href="contact.html">Contact Us</a></li>
+        </ul>
       </nav>
     </header>
+
 
     <!-- Events -->
     <main class="events">
@@ -52,7 +50,7 @@
           </a>
         </div>
       </section>
-      <div id="event1" class="event-detail section-margin hidden">
+      <div id="event1" class="event-detail hidden">
         <h4>Robotic Programing for Young Technopreneurs</h4>
         <p>Are you 7-13 years old? Do you want to program your own Robots? TechV Connects Inc gives you an opportunity
           to fulfill your dreams through our programs.</p>
