service & solution page

--- a/events.html
+++ b/events.html
@@ -23,6 +23,7 @@
       <div class="toggle"><a href="#"><i class="fas fa-bars"></i></a></div>
       <nav>
         <ul>
+          <li class="item"><a href="solutions.html">Solutions</a></li>
           <li class="item"><a href="services.html">Services</a></li>
           <li class="item"><a href="events.html">Events</a></li>
           <li class="item"><a href="contact.html">Contact Us</a></li>
