--- a/events.html
+++ b/events.html
@@ -41,7 +41,7 @@
       </section>
       <!-- <hr class="style13"> -->
       <section class="past">
-        <div class="bottom-arrow"><h2 class="widthSet">Events in the past</h2></div>
+        <div class="bottomBorder"><h2>Events in the past</h2></div>
         <div class="outer-containerEv">
           <a href="#event1" class="link">
             <h4 class="box">Summer 2020</h4>
