solutions page image changes

--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@
           </div>
           <div class="service-intro section-margin">
             <figure>
-              <a href="services.html#ai">
+              <a href="solutions.html">
                 <!-- <img src="./images/ai_1.png"> -->
                 <figcaption>Artificial Intelligence Solutions</figcaption>
               </a>
             </figure>
             <figure>
-              <a href="services.html#bc">
+              <a href="solutions.html">
                 <!-- <img src="./images/blockchain_2.png"> -->
                 <figcaption>Blockchain Solutions</figcaption>
               </a>
             </figure>
             <figure>
-              <a href="services.html#ess">
+              <a href="services.html">
                 <!-- <img src="./images/erp_2.png"> -->
                 <figcaption>Enterprise Software Solutions</figcaption>
               </a>
             </figure>
             <figure>
-              <a href="services.html#hc">
+              <a href="services.html">
                 <!-- <img src="./images/humancapitol_4.png"> -->
                 <figcaption>IT Staffing solutions</figcaption>
               </a>
             </figure>
             <figure>
-              <a href="services.html#cs">
+              <a href="solutions.html">
                 <!-- <img src="./images/cybersecurity_3.png"> -->
                 <figcaption>Cybersecurity</figcaption>
               </a>
