--- a/solutions.html
+++ b/solutions.html
@@ -46,10 +46,8 @@
         <h2 class="head">Solution Platforms</h2>
         <div class="solution-container">
           <div class="sol-cont1">
-            <div class="solImg"><img src="./images/og.png" /></div>
-
-            <h3 class="fontColorSol1">OIL&GAS/MINING</h3>
-
+            <h3>OIL&GAS/MINING</h3>
+            <div class="solImg"><img src="./images/o&g.jpg" /></div>
             <div class="sol-cont1-content">
               <h4>Analytics/AI</h4>
               <ul>
@@ -85,8 +83,10 @@
             </div>
           </div>
           <div class="sol-cont2">
-            <div class="solImg"><img src="./images/bfsi.png" /></div>
-            <h3 class="fontColorSol2">FINTECH SOLUTIONS</h3>
+            <h3>FINTECH SOLUTIONS</h3>
+            <div class="solImg">
+              <img src="./images/Financial Analytics.jpg" />
+            </div>
             <div class="sol-cont2-content">
               <h4>Analytics/AI</h4>
               <ul>
@@ -118,8 +118,8 @@
             </div>
           </div>
           <div class="sol-cont3">
-            <div class="solImg"><img src="./images/healthcare.png" /></div>
-            <h3 class="fontColorSol3">HEALTHCARE/PHARMA</h3>
+            <h3>HEALTHCARE/PHARMA</h3>
+            <div class="solImg"><img src="./images/Healthcare.jpg" /></div>
             <div class="sol-cont3-content">
               <h4>Analytics/AI</h4>
               <ul>
