--- a/events.html
+++ b/events.html
@@ -69,8 +69,7 @@
       <p class="font-copyright">COPYRIGHT © 2020 TECHV CONNECTS INC - ALL RIGHTS RESERVED</p>
     </footer>
   </div>
-  
 </body>
-<script src="/js/events.js"></script>
+<script src="./js/events.js"></script>
 <script src="./js/menu-toggle.js"></script>
 </html>
