phone number tweaked

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <figure>
               <a href="services.html">
                 <!-- <img src="./images/humancapitol_4.png"> -->
-                <figcaption>IT Staffing solutions</figcaption>
+                <figcaption>IT Recruitment</figcaption>
               </a>
             </figure>
             <figure>
@@ -156,7 +156,7 @@
         <p class="font-small">Contact Us</p>
         <h4 class="title-small">TechV Connects Inc</h4>
         <p class="font-small">customersuccess@techvconnects.ca</p>
-        <p class="font-small">+1 437 986 5012, + 403 891 8699</p>
+        <p class="font-small">+1 437 986 5012, +1 403 891 8699</p>
         <p class="font-copyright">
           COPYRIGHT © 2020 TECHV CONNECTS INC - ALL RIGHTS RESERVED
         </p>
