--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         <p class="font-small">Contact Us</p>
         <h4 class="title-small">TechV Connects Inc</h4>
         <p class="font-small">customersuccess@techvconnects.ca</p>
-        <p class="font-small">+1 437 986 5012, + 403 891 8699</p>
+        <p class="font-small">+1 437 986 5012, +1 403 891 8699</p>
         <p class="font-copyright">
           COPYRIGHT © 2020 TECHV CONNECTS INC - ALL RIGHTS RESERVED
         </p>
