--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo-item">
           <a href="index.html"
             ><img
-              class="logo"
+              class="logo zoom"
               src="./images/logotrial.png"
               alt="Travel Experts Logo"
           /></a>
