css tweaks- events page

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       </header>
 
       <!-- Contact Us Form -->
-      <main class="contact">
+      <main class="contact mainContainer">
         <h2 class="section-margin">Get In Touch</h2>
         <p>We would love to know more about you and your business !</p>
         <div class="container">
