--- a/events.html
+++ b/events.html
@@ -55,13 +55,13 @@
           <section class="past">
             <div class="bottomBorder"><h2>Events in the past</h2></div>
             <div class="outer-containerEv">
-              <a href="#event1" class="link">
+              <a href="#event1" class="link border">
                 <h4 class="box">Summer 2020</h4>
-                <div class="box">
+                <!-- <div class="box">
                   <img
                     src="https://images.unsplash.com/photo-1563207153-f403bf289096?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
                   />
-                </div>
+                </div> -->
 
                 <h4 class="box">Robotic Programing for Young Technopreneurs</h4>
               </a>
@@ -93,6 +93,6 @@
       </footer>
     </div>
   </body>
-  <script src="./js/events.js"></script>
+  <!-- <script src="./js/events.js"></script> -->
   <script src="./js/menu-toggle.js"></script>
 </html>
