--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TVC Home</title>
     <link rel="stylesheet" href="css/events.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/typography.css" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -41,7 +42,7 @@
       </header>
 
       <!-- Events -->
-      <main class="mainContainer">
+      <main class="mainContainer" id="eventID">
         <div class="events">
           <!-- <h2 class="section-margin">Events</h2> -->
           <section class="upcoming section-margin">
@@ -52,18 +53,18 @@
             </p>
           </section>
           <!-- <hr class="style13"> -->
-          <section class="past">
+          <!-- <section class="past">
             <div class="bottomBorder"><h2>Events in the past</h2></div>
             <div class="outer-containerEv">
               <a href="#event1" class="link border">
-                <h4 class="box">Summer 2020</h4>
-                <!-- <div class="box">
+                <h4 class="box">Summer 2020</h4> -->
+          <!-- <div class="box">
                   <img
                     src="https://images.unsplash.com/photo-1563207153-f403bf289096?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
                   />
                 </div> -->
 
-                <h4 class="box">Robotic Programing for Young Technopreneurs</h4>
+          <!-- <h4 class="box">Robotic Programing for Young Technopreneurs</h4>
               </a>
             </div>
           </section>
@@ -79,7 +80,7 @@
               or advanced program. Detailed schedule will be shared to you, upon
               registration.
             </p>
-          </div>
+          </div> -->
         </div>
       </main>
       <footer class="layout">
@@ -95,4 +96,5 @@
   </body>
   <!-- <script src="./js/events.js"></script> -->
   <script src="./js/menu-toggle.js"></script>
+  <script src="./js/headerAnimation.js"></script>
 </html>
