--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TVC Home</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/indexTest.css" />
     <link rel="stylesheet" href="css/typography.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -16,13 +16,14 @@
     />
   </head>
 
-  <body>
+  <body id="indexBody">
     <div class="wrapper">
       <header>
         <div class="logo-item">
           <a href="index.html"
             ><img
-              class="logo zoom"
+              class="logoIndex zoom"
+              id="imgLg"
               src="./images/logotrial.png"
               alt="Travel Experts Logo"
           /></a>
@@ -35,32 +36,45 @@
             <li class="item"><a href="solutions.html">Solutions</a></li>
             <li class="item"><a href="services.html">Services</a></li>
             <li class="item"><a href="events.html">Events</a></li>
-            <li class="item"><a href="contact.html">Contact Us</a></li>
+            <li class="item">
+              <a href="contact.html">Connect</a>
+            </li>
           </ul>
         </nav>
       </header>
+      <section id="main" class="mainHero">
+        <!-- HERO Section  -->
+        <div class="hero content">
+          <!-- <div class="bg"></div> -->
+          <!-- <p>Digital transformation through </p> -->
+          <div class="left">
+            <div class="hero-words">
+              <h1>
+                We connect the right technology solutions for you. With a human
+                touch.
+              </h1>
 
-      <!-- HERO Section  -->
-      <div class="hero">
-        <!-- <div class="bg"></div> -->
-        <!-- <p>Digital transformation through </p> -->
-        <div class="hero-words">
-          <h1>
-            We connect the right technology solutions for you. With a human
-            touch.
-          </h1>
+              <p>
+                One-stop shop to develop built-to-order technology solutions,
+                specific to your needs and requirements.
+              </p>
 
-          <p>
-            One-stop shop to develop built-to-order technology solutions,
-            specific to your needs and requirements.
-          </p>
-
-          <!-- <a href="contact.html" class="hero-btn">Connect Now</a> -->
-          <button onclick="window.location.href='contact.html';" id="connect">
-            Connect Now
-          </button>
+              <!-- <a href="contact.html" class="hero-btn">Connect Now</a> -->
+              <button
+                onclick="window.location.href='contact.html';"
+                id="connect"
+              >
+                Connect Now
+              </button>
+            </div>
+          </div>
+          <div class="right">
+            <div class="imageStyle">
+              <img src="./images/test33.png" />
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
 
       <main class="index-main">
         <!-- Introduction -->
@@ -164,4 +178,5 @@
     </div>
   </body>
   <script src="./js/menu-toggle.js"></script>
+  <script src="./js/headerAnimation.js"></script>
 </html>
