--- a/solutions.html
+++ b/solutions.html
@@ -42,7 +42,7 @@
         </nav>
       </header>
 
-      <main class="mainContainer">
+      <main class="mainContainer solMargin">
         <h2 class="head">Solution Platforms</h2>
         <div class="solution-container">
           <div class="sol-cont1">
@@ -167,4 +167,5 @@
     </div>
   </body>
   <script src="./js/menu-toggle.js"></script>
+  <script src="./js/headerAnimation.js"></script>
 </html>
