--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       </header>
 
       <!-- Contact Us Form -->
-      <main class="contact mainContainer">
+      <main class="contact mainContainer" style="margin-top: 12em" id="main">
         <h2 class="section-margin">Get In Touch</h2>
         <p>We would love to know more about you and your business !</p>
         <div class="container">
@@ -78,4 +78,5 @@
     </div>
   </body>
   <script src="./js/menu-toggle.js"></script>
+  <script src="./js/headerAnimation.js"></script>
 </html>
