--- a/services.html
+++ b/services.html
@@ -151,4 +151,5 @@
     </div>
   </body>
   <script src="./js/menu-toggle.js"></script>
+  <script src="./js/headerAnimation.js"></script>
 </html>
